fix: Set markdown overflow to auto; not hard scroll.

--- a/src/styles/partials/markdown.scss
+++ b/src/styles/partials/markdown.scss
@@ -69,8 +69,8 @@
   }
 
   pre {
-    padding:    1rem;
-    overflow-x: scroll;
+    padding:  1rem;
+    overflow: auto;
 
     background-color: var(--secondary-bg-color);
 
